--- a/src/main/resources/application-default.properties
+++ b/src/main/resources/application-default.properties
@@ -12,3 +12,6 @@ spring.jpa.show-sql=true
 app.jwt.secret = RandomSecretKey
 #1 day
 app.jwt.expiration-in-ms=86400000
+
+
+authentication.internal-api-key =InternalApiKey1234!
